# tachyon

./: .gitignore  .travis.yml  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  libtool
include/: config.h  config.h.in  tachyon.h
src/: configure.scan
src/algorithm/compression/: genotype_encoder.h
src/algorithm/encryption/: encryption.cpp
src/algorithm/permutation/: genotype_sorter.cpp
src/containers/: data_container.cpp  variant_block.cpp  variant_container.cpp
